--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@sequelize/cli": "^7.0.0-alpha.46",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -48,7 +49,7 @@
     "@types/node": "^22.14.1",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
-    "@types/sequelize": "^4.28.20",                     
+    "@types/sequelize": "^4.28.20",
     "@types/slug": "^5.0.9",
     "eslint": "^9.23.0",
     "eslint-config-google": "^0.14.0",
